# crane-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
crane_bench/: __init__.py  artifacts.py  bench.py  protocols.py  tasks.py
crane_bench/data/: __init__.py  base.py  subject.py
crane_bench/exec/: __init__.py  base.py  sequential.py
crane_bench/filter/: __init__.py  base.py  custom.py  group.py  regex.py
crane_bench/fns/: __init__.py  linear_train.py  zero_shot.py
crane_bench/plan/: __init__.py  base.py  grouped.py
